# serde-email

./: .gitignore  Cargo.toml  LICENSE  README.md  test.sh
.cargo/: config
src/: email.rs  email_error.rs  email_visitor.rs  is_valid_email.rs  lib.rs
src/email/: email_visitor.rs  sea_orm_support.rs  serde_support.rs  sqlx_support.rs
