[package]
name = "serde-email"
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "A validating email type that can be serialised using Serde"
keywords = ["email", "email_address", "validation", "serde", "serialization"]
categories = ["email", "encoding"]
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
repository = "https://github.com/JosephLenton/serde-email"
readme = "README.md"
documentation = "https://docs.rs/serde-email/latest/serde-email"

[features]
default = ["serde"]
all = ["default", "serde", "sea-orm"]
serde = ["dep:serde"]
sea-orm = ["dep:sea-orm"]

[dependencies]
email_address = "0.2.4"
sea-orm = { version = "0.12.2", optional = true }
serde = { version = "1.0.183", optional = true }

[dev-dependencies]
serde_json = "1.0.104"
sea-orm = "0.12.2"
serde = "1.0.183"
